[tool.poetry]
name = "pebble"
version = "0.1.0"
description = ""
authors = ["Dan Cardin <dcardin@bakerstreet.llc>"]
license = "CC0 1.0 Universal"

[tool.poetry.dependencies]
python = "^3.11"
aiofiles = ">=0.8.0"
anyio = ">=3.5.0"
asgiref = ">=3.5.0"
async-timeout = ">=4.0.2"
asyncio = ">=3.4.3"
attrs = ">=21.4.0"
breadability = ">=0.1.20"
certifi = ">=2021.10.8"
chardet = ">=4.0.0"
charset-normalizer = ">=2.0.12"
click = ">=8.1.2"
decorator = ">=5.1.1"
docopt = ">=0.6.2"
fastapi = ">=0.68.2"
h11 = ">=0.12.0"
httpcore = ">=0.14.7"
httpx = ">=0.22.0"
idna = "3.3"
iniconfig = ">=1.1.1"
joblib = ">=1.1.0"
lxml = ">=4.9.0"
packaging = ">=21.3"
pendulum = ">=2.1.2"
pluggy = ">=1.0.0"
ply = ">=3.11"
py = ">=1.11.0"
pydantic = ">=1.9.0"
pyparsing = ">=3.0.8"
python-dateutil = ">=2.8.2"
python-multipart = ">=0.0.5"
pytzdata = ">=2020.1"
regex = ">=2022.6.2"
requests = ">=2.28.0"
rfc3986 = ">=1.5.0"
six = ">=1.16.0"
sniffio = ">=1.2.0"
soupsieve = ">=2.3.2.post1"
starlette = ">=0.14.2"
tomli = "2.0.1"
typing-extensions = ">=4.1.1"
urllib3 = ">=1.26.9"
uvicorn = ">=0.15.0"
stringcase = ">=1.2.0"
phonenumbers = ">=8.13.19"
pytesseract = "^0.3.10"

[tool.poetry.dev-dependencies]
pytest = "7.1.1"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
